fixed homescreen padding and alignment

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -225,8 +225,7 @@ div#message {
 }
 
 div#home_content {
-  width: 75%;
-  margin: 30px auto;
+  margin: 30px 5%;
 }
 
 div#item_editor_container {
